# locallama

./: .gitignore  README.md  pyproject.toml
src/locallama.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/locallama_detroix23/: __init__.py  __main__.py
src/locallama_detroix23/modules/: __init__.py  app.py  chat.py  controls.py  debug.py  defaults.py  prompts.py  settings.py  types.py
