[project]
name = "locallama"
version = "0.0.1"
description = "Use the ollama API in the command line."
authors = [
    { name="Detroix23", email="detroix23@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = [
    "dotenv",
]
readme = "README.md"
license = "CC-BY-4.0"
license-files = ["LICENSE.md"]

[project.urls]
Repository = "https://github.com/Detroix23/locallama"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

